# art-organize

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  todo.txt
contextual/: Cargo.toml
contextual/src/: windows.rs
db/: Cargo.toml
db/src/: blob.rs  command.rs  commands.rs  contained_piece.rs  lib.rs  media_type.rs  piece.rs  serialized.rs  skeb learnings.txt  source_type.rs  table.rs  tag.rs  tag_category.rs  traits.rs  v2.rs
db/src/serialized/: blob.rs  piece.rs  source_type.rs  tag_category.rs
db/src/traits/: delete.rs  edit.rs  exists.rs  index.rs
db/src/v2/: commands.rs  piece.rs
ipc/: Cargo.toml
ipc/src/: lib.rs
search/: Cargo.toml
search/src/: execute.rs  lib.rs  model.rs  parse.rs
src/: app.rs  backend.rs  cli.rs  config.rs  consts.rs  contextual.rs  egui_app.rs  first_time.rs  frontend.rs  gui.rs  iter_ext.rs  layout.rs  main.rs  model.rs  project_dir.rs  raw_image.rs  style.rs  ui_memory.rs  undo.rs  updater.rs  views.rs
src/app/: actor.rs  blob.rs  date.rs  gallery.rs  gui_state.rs  piece.rs  piece_editor.rs  tag.rs  tag_category.rs  widgets.rs
src/app/gui_state/: blob.rs  category.rs  gallery.rs  help.rs  home.rs  piece.rs  piece_list.rs  search.rs  tag.rs  tag_list.rs  update.rs
src/app/widgets/: blob.rs  category.rs  confirm.rs  date.rs  gallery.rs  piece.rs  tag.rs
src/backend/: actor.rs
src/contextual/: unimpl.rs  windows.rs
src/frontend/: blob.rs  category.rs  easy_mark_editor.rs  piece.rs  tag.rs  tag_editor.rs  texture_storage.rs
src/model/: media_type.rs  piece.rs  source_type.rs
src/views/: edit_blob.rs  edit_category.rs  edit_piece.rs  edit_tag.rs  gallery.rs  view_blob.rs  view_piece.rs  view_tag.rs
