[package]
authors = ["AngelOfSol <julietckilian@gmail.com>"]
edition = "2018"
name = "art-organize"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
  "contextual",
  "db",
  "ipc",
]

[dependencies]
anyhow = "1.0.38"
bincode = "1.3.2"
chrono = {version = "0.4.19", features = ["serde"]}
clap = "3.0.0-beta.2"
contextual = {path = "contextual"}
db = {path = "db"}
directories = "3.0.1"
futures-util = "0.3.13"
image = "0.23.14"
imgui = "0.7.0"
imgui-sys = "0.7.0"
imgui-wgpu = {git = "https://github.com/Yatekii/imgui-wgpu-rs.git"}
imgui-winit-support = "0.7.0"
interprocess = "1.1.1"
ipc = {path = "ipc"}
lazy_static = "1.4.0"
serde = {version = "1.0.124", features = ["derive"]}
strum = "0.20.0"
tokio = {version = "1.3.0", features = ["rt", "rt-multi-thread", "time", "macros", "sync", "fs"]}
toml = "0.5.8"
wgpu = "0.7.0"
winit = "0.24.0"
winreg = "0.8.0"
glam = "0.13.0"

[patch.crates-io]
imgui = {git = "https://github.com/imgui-rs/imgui-rs.git"}
imgui-sys = {git = "https://github.com/imgui-rs/imgui-rs.git"}
