[package]
authors = ["AngelOfSol <julietckilian@gmail.com>"]
edition = "2018"
name = "art-organize"
resolver = "2"
version = "0.2.0"

[profile.release]
# codegen-units = 1
# lto = "thin"
# opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
  "contextual",
  "db",
  "search",
]

[dependencies]
anyhow = "1.0.38"
bincode = "1.3.2"
chrono = {version = "0.4.19", features = ["serde"]}
clap = "3.0.0-beta.2"
clipboard-win = "4.0.3"
contextual = {path = "contextual"}
db = {path = "db"}
directories = "3.0.1"
egui = "0.16"
egui_demo_lib = "0.16.0"
egui_wgpu_backend = "0.16"
egui_winit_platform = "0.13"
futures-util = "0.3.13"
glam = "0.13.0"
image = "0.23.14"
interprocess = "1.1.1"
itertools = "0.10.0"
lazy_static = "1.4.0"
regex = "1.4.5"
reqwest = "0.11.9"
rfd = {git = "https://github.com/AngelOfSol/rfd.git"}
search = {path = "search"}
self_update = {version = "0.26.0", features = ["compression-zip-deflate", "archive-zip"]}
serde = {version = "1.0.124", features = ["derive"]}
strum = "0.20.0"
tokio = {version = "1.3.0", features = ["rt", "rt-multi-thread", "time", "macros", "sync", "fs"]}
toml = "0.5.8"
trash = "1.3.0"
wgpu = "0.12"
winit = "0.26"
winreg = "0.8.0"
