[package]
authors = ["AngelOfSol <julietckilian@gmail.com>"]
edition = "2018"
name = "db"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.2"
chrono = {version = "0.4.19", features = ["serde"]}
serde = {version = "1.0.124", features = ["derive"]}
slab = {git = "https://github.com/tokio-rs/slab.git"}
undo = "0.42.3"
