[package]
authors = ["AngelOfSol <julietckilian@gmail.com>"]
edition = "2018"
name = "ipc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0.38"
bincode = "1.3.2"
interprocess = "1.1.1"
serde = {version = "1.0.124", features = ["derive"]}
tokio = {version = "1.3.0", features = ["rt", "rt-multi-thread", "time", "macros", "sync", "fs"]}
